Add an option to pass workflow input and parms to mistral execution
Improving mistral rally tests by adding more options.

Change-Id: I37443ebae674b7eeacdcade36b6a848a151d94d4

--- a/rally-jobs/extra/mistral_wb.yaml
+++ b/rally-jobs/extra/mistral_wb.yaml
@@ -6,6 +6,9 @@ name: wb
 workflows:
   wf1:
     type: direct
+    input:
+      - input1: input1
+      - some_json_input: {}
     tasks:
       hello:
         action: std.echo output="Hello"
