Add neutron.CreateAndShowSecurityGroup scenario
Create and show Neutron security-group

Measure the "neutron security-group-create" and "neutron
security-group-show" command performance.

Change-Id: I9ee650c691773fbe4b85e927a4b66c57e0dd659b

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -153,6 +153,25 @@
         failure_rate:
           max: 20
 
+  NeutronSecurityGroup.create_and_show_security_group:
+    -
+      args:
+        security_group_create_args: {}
+      runner:
+        type: "constant"
+        times: {{smoke or 20 }}
+        concurrency: {{smoke or 10}}
+      context:
+        users:
+          tenants: {{smoke or 3}}
+          users_per_tenant: {{smoke or 2}}
+        quotas:
+          neutron:
+            security_group: -1
+      sla:
+        failure_rate:
+          max: 20
+
   NeutronSecurityGroup.create_and_delete_security_groups:
     -
       args:
