--- a/rally-jobs/heat.yaml
+++ b/rally-jobs/heat.yaml
@@ -349,3 +349,19 @@
         users:
           tenants: 2
           users_per_tenant: 2
+
+  Authenticate.validate_heat:
+    -
+      args:
+        repetitions: 2
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 5
+      sla:
+        failure_rate:
+          max: 0
