--- a/rally-jobs/rally-keystone-api-v2.yaml
+++ b/rally-jobs/rally-keystone-api-v2.yaml
@@ -650,27 +650,27 @@
         failure_rate:
           max: 0
 
-#  GlanceImages.create_image_and_boot_instances:
-#    -
-#      args:
-#        image_location: "{{ cirros_image_url }}"
-#        container_format: "bare"
-#        disk_format: "qcow2"
-#        flavor:
-#            name: "m1.tiny"
-#        number_instances: 2
-#      runner:
-#        type: "constant"
-#        times: 1
-#        concurrency: 1
-#      context:
-#        users:
-#          tenants: 3
-#          users_per_tenant: 1
-#      sla:
-#        failure_rate:
-#          max: 0
-#
+  GlanceImages.create_image_and_boot_instances:
+    -
+      args:
+        image_location: "{{ cirros_image_url }}"
+        container_format: "bare"
+        disk_format: "qcow2"
+        flavor:
+            name: "m1.tiny"
+        number_instances: 2
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
   SwiftObjects.create_container_and_object_then_list_objects:
     -
       args:
