[jobs] Test all keystone scenarios
Now all our scenarios should work with both keystone v2 and v3.
Also, this patch:
- sync both task files for keystone v2 and v3
- remove required_api_versions from
       KeystoneBasic.authenticate_user_and_validate_token
- remove workarounds from cli tests for samples and certification task

Change-Id: I33f26b2da6905a4e62058a90a830e21de7c0fd8a

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -22,82 +22,82 @@
         failure_rate:
           max: 0
 
-  #KeystoneBasic.create_user_set_enabled_and_delete:
-    #-
-      #args:
-        #enabled: true
-      #runner:
-        #type: "constant"
-        #times: 10
-        #concurrency: 10
-      #sla:
-        #failure_rate:
-          #max: 0
-    #-
-      #args:
-        #enabled: false
-      #runner:
-        #type: "constant"
-        #times: 10
-        #concurrency: 10
-      #sla:
-        #failure_rate:
-          #max: 0
+  KeystoneBasic.create_user_set_enabled_and_delete:
+    -
+      args:
+        enabled: true
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        enabled: false
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
 
-  #KeystoneBasic.create_and_list_tenants:
-    #-
-      #args: {}
-      #runner:
-        #type: "constant"
-        #times: 10
-        #concurrency: 10
-      #sla:
-        #failure_rate:
-          #max: 0
+  KeystoneBasic.create_and_list_tenants:
+    -
+      args: {}
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
 
-  #KeystoneBasic.get_entities:
-    #-
-      #runner:
-        #type: "constant"
-        #times: 20
-        #concurrency: 10
-      #sla:
-        #failure_rate:
-          #max: 0
-    #-
-      #args:
-        #service_name: null
-      #runner:
-        #type: "constant"
-        #times: 20
-        #concurrency: 10
-      #sla:
-        #failure_rate:
-          #max: 0
-    #-
-      #args:
-        #service_name: "nova"
-      #runner:
-        #type: "constant"
-        #times: 20
-        #concurrency: 10
-      #sla:
-        #failure_rate:
-          #max: 0
+  KeystoneBasic.get_entities:
+    -
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        service_name: null
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        service_name: "nova"
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
 
-  #KeystoneBasic.add_and_remove_user_role:
-    #-
-      #runner:
-        #type: "constant"
-        #times: 10
-        #concurrency: 5
-      #context:
-        #users:
-          #tenants: 1
-          #users_per_tenant: 1
-      #sla:
-        #failure_rate:
-          #max: 0
+  KeystoneBasic.add_and_remove_user_role:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
 
   KeystoneBasic.create_and_delete_role:
     -
@@ -124,19 +124,19 @@
         failure_rate:
           max: 0
 
-  #KeystoneBasic.create_add_and_list_user_roles:
-    #-
-      #runner:
-        #type: "constant"
-        #times: 10
-        #concurrency: 5
-      #context:
-        #users:
-          #tenants: 1
-          #users_per_tenant: 1
-      #sla:
-        #failure_rate:
-          #max: 0
+  KeystoneBasic.create_add_and_list_user_roles:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
 
   KeystoneBasic.create_and_list_users:
     -
@@ -149,31 +149,31 @@
         failure_rate:
           max: 0
 
-  #KeystoneBasic.create_tenant:
-    #-
-      #args: {}
-      #runner:
-        #type: "constant"
-        #times: 10
-        #concurrency: 10
-      #sla:
-        #failure_rate:
-          #max: 0
+  KeystoneBasic.create_tenant:
+    -
+      args: {}
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
 
-  #KeystoneBasic.create_tenant_with_users:
-    #-
-      #args:
-        #users_per_tenant: 10
-      #runner:
-        #type: "constant"
-        #times: 10
-        #concurrency: 10
-      #context:
-        #users:
-          #tenants: 3
-      #sla:
-        #failure_rate:
-          #max: 0
+  KeystoneBasic.create_tenant_with_users:
+    -
+      args:
+        users_per_tenant: 10
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      context:
+        users:
+          tenants: 3
+      sla:
+        failure_rate:
+          max: 0
 
   KeystoneBasic.create_user_update_password:
     -
@@ -186,47 +186,47 @@
         failure_rate:
           max: 0
 
-  #KeystoneBasic.create_update_and_delete_tenant:
-    #-
-      #args: {}
-      #runner:
-        #type: "constant"
-        #times: 10
-        #concurrency: 5
-      #sla:
-        #failure_rate:
-          #max: 0
+  KeystoneBasic.create_update_and_delete_tenant:
+    -
+      args: {}
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      sla:
+        failure_rate:
+          max: 0
 
-  #KeystoneBasic.create_delete_user:
-    #-
-      #args: {}
-      #runner:
-        #type: "constant"
-        #times: 10
-        #concurrency: 10
-      #sla:
-        #failure_rate:
-          #max: 0
+  KeystoneBasic.create_delete_user:
+    -
+      args: {}
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
 
-  #KeystoneBasic.create_and_delete_service:
-    #-
-      #runner:
-        #type: "constant"
-        #times: 10
-        #concurrency: 5
-      #sla:
-        #failure_rate:
-          #max: 0
+  KeystoneBasic.create_and_delete_service:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      sla:
+        failure_rate:
+          max: 0
 
-  #KeystoneBasic.create_and_list_services:
-    #-
-      #runner:
-        #type: "constant"
-        #times: 10
-        #concurrency: 5
-      #sla:
-        #failure_rate:
-          #max: 0
+  KeystoneBasic.create_and_list_services:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      sla:
+        failure_rate:
+          max: 0
 
   KeystoneBasic.create_and_list_ec2credentials:
     -
