--- a/rally-jobs/rally-keystone-api-v2.yaml
+++ b/rally-jobs/rally-keystone-api-v2.yaml
@@ -22,17 +22,6 @@
         failure_rate:
           max: 0
 
-  KeystoneBasic.authenticate_user_and_validate_token:
-    -
-      args: {}
-      runner:
-        type: "constant"
-        times: 20
-        concurrency: 5
-      sla:
-        failure_rate:
-          max: 0
-
   KeystoneBasic.create_user_set_enabled_and_delete:
     -
       args:
@@ -284,6 +273,8 @@
           max: 1
           min_iterations: 10
           sigmas: 10
+        performance_degradation:
+          max_degradation: 50
 
     -
       args:
@@ -406,6 +397,164 @@
       sla:
         failure_rate:
           max: 0
+    -
+      args:
+        sleep: 0.6
+      runner:
+        type: "rps"
+        rps: 2
+        times: 5
+        timeout: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        sleep: 0.6
+      runner:
+        type: "constant"
+        concurrency: 2
+        times: 4
+        timeout: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        sleep: 0.75
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 2
+      hooks:
+        - name: sys_call
+          description: Run script
+          args: sh /home/jenkins/.rally/extra/hook_example_script.sh
+          trigger:
+            name: event
+            args:
+              unit: iteration
+              at: [2, 5, 8, 13, 17]
+        - name: sys_call
+          description: Show time
+          args: date +%Y-%m-%dT%H:%M:%S
+          trigger:
+            name: event
+            args:
+              unit: time
+              at: [0, 2, 5, 6, 9]
+        - name: sys_call
+          description: Show system name
+          args: uname -a
+          trigger:
+            name: event
+            args:
+              unit: iteration
+              at: [2, 3, 4, 5, 6, 8, 10, 12, 13, 15, 17, 18]
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        sleep: 0.25
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 2
+      hooks:
+        - name: sys_call
+          description: test hook
+          args: /bin/true
+          trigger:
+            name: periodic
+            args:
+              unit: iteration
+              step: 2
+              start: 4
+              end: 8
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        sleep: 1
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 1
+      hooks:
+        - name: sys_call
+          description: Get system name
+          args: uname -a
+          trigger:
+            name: event
+            args:
+              unit: time
+              at: [0, 2, 4, 6, 8, 10]
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        sleep: 1
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 1
+      hooks:
+        - name: sys_call
+          description: test hook
+          args: /bin/true
+          trigger:
+            name: periodic
+            args:
+              unit: time
+              step: 2
+              start: 0
+              end: 6
+    -
+      args:
+        sleep: 0.25
+      runner:
+        type: "rps"
+        times: 55
+        rps:
+          start: 1
+          end: 10
+          step: 1
+        max_concurrency: 10
+        max_cpu_count: 3
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        sleep: 0.5
+      runner:
+        type: "rps"
+        times: 55
+        rps:
+          start: 1
+          end: 10
+          step: 1
+          duration: 2
+        max_concurrency: 10
+        max_cpu_count: 3
+      sla:
+        failure_rate:
+          max: 0
 
   Dummy.dummy_exception:
     -
@@ -488,6 +637,50 @@
         times: 50
         concurrency: 10
 
+  Dummy.dummy_random_action:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+
+  Dummy.dummy_timed_atomic_actions:
+    -
+      args:
+        number_of_actions: 5
+        sleep_factor: 1
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 3
+      sla:
+        max_avg_duration_per_atomic:
+          action_0: 1.0
+          action_1: 2.0
+          action_2: 3.0
+          action_3: 4.0
+          action_4: 5.0
+
+  Dummy.failure:
+    -
+      args:
+        sleep: 0.2
+        from_iteration: 5
+        to_iteration: 15
+        each: 2
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 5
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          min: 25
+          max: 25
+
   FakePlugin.testplugin:
     -
       runner:
@@ -495,6 +688,70 @@
         times: 4
         concurrency: 4
       sla:
+        failure_rate:
+          max: 0
+
+  RallyProfile.generate_names_in_atomic:
+    -
+      args:
+        number_of_names: 100
+      runner:
+        type: "constant"
+        times: 1000
+        concurrency: 10
+      sla:
+        max_avg_duration_per_atomic:
+          generate_100_names: 0.01
+        failure_rate:
+          max: 0
+    -
+      args:
+        number_of_names: 1000
+      runner:
+        type: "constant"
+        times: 500
+        concurrency: 10
+      sla:
+        max_avg_duration_per_atomic:
+          generate_1000_names: 0.075
+        failure_rate:
+          max: 0
+    -
+      args:
+        number_of_names: 10000
+      runner:
+        type: "constant"
+        times: 200
+        concurrency: 10
+      sla:
+        max_avg_duration_per_atomic:
+          generate_10000_names: 0.75
+        failure_rate:
+          max: 0
+
+  RallyProfile.calculate_atomic:
+    -
+      args:
+        number_of_atomics: 100
+      runner:
+        type: "constant"
+        times: 300
+        concurrency: 10
+      sla:
+        max_avg_duration_per_atomic:
+          calculate_100_atomics: 0.025
+        failure_rate:
+          max: 0
+    -
+      args:
+        number_of_atomics: 500
+      runner:
+        type: "constant"
+        times: 100
+        concurrency: 10
+      sla:
+        max_avg_duration_per_atomic:
+          calculate_500_atomics: 0.46
         failure_rate:
           max: 0
 
@@ -513,22 +770,6 @@
           max: 0
 
   Authenticate.validate_glance:
-    -
-      args:
-        repetitions: 2
-      runner:
-        type: "constant"
-        times: 10
-        concurrency: 5
-      context:
-        users:
-          tenants: 3
-          users_per_tenant: 5
-      sla:
-        failure_rate:
-          max: 0
-
-  Authenticate.validate_heat:
     -
       args:
         repetitions: 2
@@ -632,6 +873,48 @@
         failure_rate:
           max: 0
 
+    -
+      args:
+        image_location: "{{ cirros_image_url }}"
+        container_format: "bare"
+        disk_format: "qcow2"
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 3
+        api_versions:
+          glance:
+            version: 2
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        image_location: "{{ cirros_image_url }}"
+        container_format: "bare"
+        disk_format: "qcow2"
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        api_versions:
+          glance:
+            version: 1
+        roles:
+          - admin
+      sla:
+        failure_rate:
+          max: 0
+
   GlanceImages.create_and_list_image:
     -
       args:
@@ -646,6 +929,29 @@
         users:
           tenants: 1
           users_per_tenant: 1
+        api_versions:
+          glance:
+            version: 1
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        image_location: "~/.rally/extra/fake-image.img"
+        container_format: "bare"
+        disk_format: "qcow2"
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        api_versions:
+          glance:
+            version: 2
       sla:
         failure_rate:
           max: 0
