Change "a SQL" to "an SQL"
According to the word choice convention in
http://docs.openstack.org/contributor-guide/writing-style/word-choice.html
We should use "an SQL" instead of "a SQL".

Change-Id: Icd42fc4e3d078725adca2bf464164111bfae1a2d

--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -612,7 +612,7 @@
 # Deprecated group/name - [DATABASE]/sql_max_retries
 #max_retries = 10
 
-# Interval between retries of opening a SQL connection. (integer
+# Interval between retries of opening an SQL connection. (integer
 # value)
 # Deprecated group/name - [DEFAULT]/sql_retry_interval
 # Deprecated group/name - [DATABASE]/reconnect_interval
