--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -907,6 +907,23 @@
         failure_rate:
           max: 0
 
+  CinderVolumeTypes.create_and_set_volume_type_keys:
+    -
+      args:
+        volume_type_key:
+          volume_backend_name: "LVM_iSCSI"
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   CinderVolumes.list_transfers:
     -
       args:
