[Service] Port all glance scenarios to Image Service
Changes:
- glancewrapper are ported to Image Service
- All existing glance scenarios are ported to Image service

Change-Id: I128dd6fc970cae946a9ecf23da36c349e37d24a0

--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -166,12 +166,11 @@
           - admin
         images:
           image_url: "~/.rally/extra/fake-image.img"
-          image_type: "qcow2"
-          image_container: "bare"
+          disk_format: "qcow2"
+          container_format: "bare"
           images_per_tenant: 1
           image_name: "image-context-test"
-          image_args:
-            visibility: "public"
+          visibility: "public"
       sla:
         failure_rate:
           max: 0
