--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -736,12 +736,11 @@
           - admin
         images:
           image_url: "{{ cirros_image_url }}"
-          image_type: "qcow2"
-          image_container: "bare"
+          disk_format: "qcow2"
+          container_format: "bare"
           images_per_tenant: 1
           image_name: "rally-named-image-from-context"
-          image_args:
-            visibility: "public"
+          visibility: "public"
       sla:
         failure_rate:
           max: 0
