Add neutron.CreateAndShowNetwork scenario
Create a network, then show details of the network.

Change-Id: I4d9f89e16b15d879db5941205dba4bc74e95979b

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -42,6 +42,25 @@
         failure_rate:
           max: 20
 
+  NeutronNetworks.create_and_show_network:
+    -
+      args:
+        network_create_args: {}
+      runner:
+        type: "constant"
+        times: {{smoke or 10}}
+        concurrency: {{smoke or 2}}
+      context:
+        users:
+          tenants: {{smoke or 3}}
+          users_per_tenant: {{smoke or 2}}
+        quotas:
+          neutron:
+            network: -1
+      sla:
+        failure_rate:
+          max: 0
+
   NeutronNetworks.create_and_list_subnets:
     -
       args:
