--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -141,8 +141,6 @@
       sla:
         failure_rate:
           max: 0
-
-  NovaServers.boot_and_list_server:
     -
       args:
         flavor:
@@ -159,6 +157,26 @@
           tenants: 2
           users_per_tenant: 2
           user_choice_method: "round_robin"
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        flavor:
+            name: {{flavor_name}}
+        image:
+            name: {{image_name}}
+        files:
+            /home/bootfile: "rallytest"
+        detailed: True
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 1
       sla:
         failure_rate:
           max: 0
