Add properties argument when create ironic node
This commit simply adds local boot argument to ironic
creation process.

Change-Id: Id1435d6e9bb2a33ccd0e10a0f920070a8e37537d

--- a/rally-jobs/rally-ironic.yaml
+++ b/rally-jobs/rally-ironic.yaml
@@ -4,6 +4,8 @@
     -
       args:
         driver: "fake"
+        properties:
+          capabilities: "boot_option:local"
       runner:
         type: "constant"
         times: 100
