--- a/samples/tasks/scenarios/ironic/create-and-delete-node.yaml
+++ b/samples/tasks/scenarios/ironic/create-and-delete-node.yaml
@@ -3,6 +3,8 @@
     -
       args:
         driver: "pxe_ssh"
+        properties:
+          capabilities: "boot_option:local"
       runner:
         type: "constant"
         times: 10
