[Verify] Refactoring of Tempest verifier plugin
The main goal of this patch is to move Tempest context related code
from the rally/plugins/openstack/verification/tempest/config.py file
to the separate rally/plugins/openstack/verification/tempest/context.py
file.

Also,

1. Functions such as 'add_extra_options' and 'extend_configfile' were
   moved from the rally/plugins/openstack/verification/tempest/config.py
   file to rally/verification/utils.py because these functions can be
   used by other verifier plugins in the future.

2. Now Tempest log, test image and lock files are stored in the
   corresponding deployment directory.

3. Now the 'floating_network_name' option from the 'network' section is
   configured as well.

4. A small cleanup was done.

Change-Id: I12c7918400c736b71c5a8044bb1aa53122fb96f1

--- a/rally/plugins/openstack/verification/tempest/config.ini
+++ b/rally/plugins/openstack/verification/tempest/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 debug = True
-log_file = tempest.log
 use_stderr = False
+log_file =
 
 [auth]
 use_dynamic_credentials = True
@@ -38,11 +38,13 @@ ipv6 = True
 [object-storage]
 
 [oslo_concurrency]
+lock_path =
 
 [orchestration]
 instance_type =
 
 [scenario]
+img_dir =
 img_file =
 
 [service_available]
