Switch cinder scenarios to cinder service
1. need to fix the bug of cinder servcie
2. switch cinder scenarios to cinder service
3. port new method of cinder to cinder service

Change-Id: I49bef1d940acb09c64946ba31ca85bbd5230cc36

--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -180,8 +180,7 @@
     -
       args:
         update_volume_kwargs:
-           display_name: "name_updated"
-           display_description: "desc_updated"
+           description: "desc_updated"
         size: 1
       runner:
         type: "constant"
@@ -197,8 +196,7 @@
     -
       args:
         update_volume_kwargs:
-           display_name: "name_updated"
-           display_description: "desc_updated"
+           description: "desc_updated"
         size: 1
         image:
           name: {{image_name}}
@@ -511,7 +509,6 @@
   CinderVolumes.create_snapshot_and_attach_volume:
     -
       args:
-        volume_type: false
         size:
           min: 1
           max: 1
@@ -535,7 +532,7 @@
 
     -
       args:
-        volume_type: true
+        volume_type: "test"
         size:
           min: 1
           max: 1
@@ -553,6 +550,8 @@
           flavor:
             name: {{flavor_name}}
           servers_per_tenant: 1
+        volume_types:
+          - "test"
       sla:
         failure_rate:
           max: 0
