--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -453,6 +453,27 @@
         failure_rate:
           max: 0
 
+  GlanceImages.create_and_get_image:
+    -
+      args:
+        image_location: "{{ cirros_image_url }}"
+        container_format: "bare"
+        disk_format: "qcow2"
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+        api_versions:
+          glance:
+            version: 2
+      sla:
+        failure_rate:
+          max: 0
+
   GlanceImages.create_and_delete_image:
 #    -
 #      args:
