--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -181,6 +181,25 @@
         failure_rate:
           max: 0
 
+  NovaServerGroups.create_and_get_server_group:
+  {% for s in (["affinity"], ["anti-affinity"]) %}
+    -
+      args:
+        kwargs:
+          policies: {{s}}
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+  {% endfor %}
+
   NovaServerGroups.create_and_list_server_groups:
   {% for s in (["affinity"], ["anti-affinity"]) %}
     -
