--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -42,6 +42,31 @@
         failure_rate:
           max: 20
 
+  NeutronNetworks.set_and_clear_router_gateway:
+    -
+      args:
+        network_create_args:
+          router:external: True
+        router_create_args: {}
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        network: {}
+        users:
+          tenants: 2
+          users_per_tenant: 2
+        quotas:
+          neutron:
+            network: -1
+            router: -1
+        roles:
+          - "admin"
+      sla:
+        failure_rate:
+          max: 0
+
   NeutronNetworks.create_and_show_network:
     -
       args:
