[CI] Update hacking and fix pep8 errors
Recent release of pbr 2.0.0 requires us to update hacking in
rally requirements.

* Added missing new lines at the end of files
* Skipped H105 (Don't use author tags). These lines cannot be
  removed without an agreement with the author.

Change-Id: Iac581ea4ded8ef85cd8a5bc204ac0c4436088eb6

--- a/tox.ini
+++ b/tox.ini
@@ -76,7 +76,7 @@ deps = requests[security]
 commands = python {toxinidir}/tests/ci/sync_requirements.py {posargs}
 
 [flake8]
-ignore = H703
+ignore = H703,H105
 show-source = true
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools,build,setup.py
 
