Do not check Glance V1
Change-Id: Ia3b9372487c8ea9ab3d8e97e8709308f143f7e85

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -636,28 +636,28 @@
       sla:
         failure_rate:
           max: 0
-    -
-      args:
-        flavor:
-            name: {{flavor_name}}
-        image:
-            name: {{image_name}}
-      runner:
-        type: "constant"
-        times: 2
-        concurrency: 2
-      context:
-        users:
-          tenants: 2
-          users_per_tenant: 2
-        roles:
-          - admin
-        api_versions:
-          glance:
-            version: 1
-      sla:
-        failure_rate:
-          max: 0
+#    -
+#      args:
+#        flavor:
+#            name: {{flavor_name}}
+#        image:
+#            name: {{image_name}}
+#      runner:
+#        type: "constant"
+#        times: 2
+#        concurrency: 2
+#      context:
+#        users:
+#          tenants: 2
+#          users_per_tenant: 2
+#        roles:
+#          - admin
+#        api_versions:
+#          glance:
+#            version: 1
+#      sla:
+#        failure_rate:
+#          max: 0
 
   NovaServers.boot_server:
     -
