--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -888,26 +888,26 @@
           max: 0
 
   GlanceImages.create_and_delete_image:
-    -
-      args:
-        image_location: "{{ cirros_image_url }}"
-        container_format: "bare"
-        disk_format: "qcow2"
-      runner:
-        type: "constant"
-        times: 1
-        concurrency: 1
-      context:
-        users:
-          tenants: 2
-          users_per_tenant: 3
-        api_versions:
-          glance:
-            version: 1
-      sla:
-        failure_rate:
-          max: 0
-
+#    -
+#      args:
+#        image_location: "{{ cirros_image_url }}"
+#        container_format: "bare"
+#        disk_format: "qcow2"
+#      runner:
+#        type: "constant"
+#        times: 1
+#        concurrency: 1
+#      context:
+#        users:
+#          tenants: 2
+#          users_per_tenant: 3
+#        api_versions:
+#          glance:
+#            version: 1
+#      sla:
+#        failure_rate:
+#          max: 0
+#
     -
       args:
         image_location: "{{ cirros_image_url }}"
@@ -927,50 +927,50 @@
       sla:
         failure_rate:
           max: 0
-
-    -
-      args:
-        image_location: "{{ cirros_image_url }}"
-        container_format: "bare"
-        disk_format: "qcow2"
-      runner:
-        type: "constant"
-        times: 1
-        concurrency: 1
-      context:
-        users:
-          tenants: 1
-          users_per_tenant: 1
-        api_versions:
-          glance:
-            version: 1
-        roles:
-          - admin
-      sla:
-        failure_rate:
-          max: 0
+#
+#    -
+#      args:
+#        image_location: "{{ cirros_image_url }}"
+#        container_format: "bare"
+#        disk_format: "qcow2"
+#      runner:
+#        type: "constant"
+#        times: 1
+#        concurrency: 1
+#      context:
+#        users:
+#          tenants: 1
+#          users_per_tenant: 1
+#        api_versions:
+#          glance:
+#            version: 1
+#        roles:
+#          - admin
+#      sla:
+#        failure_rate:
+#          max: 0
 
   GlanceImages.create_and_list_image:
-    -
-      args:
-        image_location: "~/.rally/extra/fake-image.img"
-        container_format: "bare"
-        disk_format: "qcow2"
-      runner:
-        type: "constant"
-        times: 1
-        concurrency: 1
-      context:
-        users:
-          tenants: 1
-          users_per_tenant: 1
-        api_versions:
-          glance:
-            version: 1
-      sla:
-        failure_rate:
-          max: 0
-
+#    -
+#      args:
+#        image_location: "~/.rally/extra/fake-image.img"
+#        container_format: "bare"
+#        disk_format: "qcow2"
+#      runner:
+#        type: "constant"
+#        times: 1
+#        concurrency: 1
+#      context:
+#        users:
+#          tenants: 1
+#          users_per_tenant: 1
+#        api_versions:
+#          glance:
+#            version: 1
+#      sla:
+#        failure_rate:
+#          max: 0
+#
     -
       args:
         image_location: "~/.rally/extra/fake-image.img"
