[CI] Add tox self env that do nothing
Change-Id: I558a16288267fa0127d4487d4302ebdac3a22c99

--- a/tox.ini
+++ b/tox.ini
@@ -91,3 +91,7 @@ local-check-factory = tests.hacking.checks.factory
 # separately, outside of the requirements files.
 deps = bindep
 commands = bindep
+
+[testenv:self]
+# TODO(astudenov): Add real script here that will run rally self test
+commands = python -c 'print "SUCCESS"'
