[Core] Add support for default platform and rally self job
* Added default credentials for all deployments.
* Added Dummy.openstack scenario that allows running
  openstack contexts with dummy scenario.
* Removed openstack users context from samples and jobs
  where it was not required.

Co-Authored-By: Anton Studenov <astudenov@mirantis.com>
Change-Id: I851f2c71e4db25bef17e25c143275e75b16595bf

--- a/tox.ini
+++ b/tox.ini
@@ -93,5 +93,4 @@ deps = bindep
 commands = bindep
 
 [testenv:self]
-# TODO(astudenov): Add real script here that will run rally self test
-commands = python -c 'print "SUCCESS"'
+commands = {toxinidir}/tests/ci/rally_self_job.sh {toxinidir}/rally-jobs/self-rally.yaml
