--- a/rally-jobs/rally-keystone-api-v2.yaml
+++ b/rally-jobs/rally-keystone-api-v2.yaml
@@ -263,6 +263,81 @@
         failure_rate:
           max: 0
 
+  Dummy.openstack:
+    -
+      args:
+        sleep: 0.01
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+          users:
+            tenants: 8
+            users_per_tenant: 4
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        sleep: 0.6
+      runner:
+        type: "constant"
+        concurrency: 2
+        times: 4
+        timeout: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        sleep: 0.6
+      runner:
+        type: "rps"
+        rps: 2
+        times: 5
+        timeout: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        sleep: 0.01
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        quotas:
+          nova:
+            instances: 200
+            cores: 200
+            ram: -1
+            floating_ips: 200
+            fixed_ips: 200
+            metadata_items: -1
+            injected_files: -1
+            injected_file_content_bytes: -1
+            injected_file_path_bytes: -1
+            key_pairs: 500
+            security_groups: 400
+            security_group_rules: 600
+          cinder:
+            gigabytes: -1
+            snapshots: -1
+            volumes: -1
+      sla:
+        failure_rate:
+          max: 0
+
   Dummy.dummy:
     -
       args:
@@ -361,80 +436,6 @@
       sla:
         failure_rate:
           max: 0
-    -
-      args:
-        sleep: 0.01
-      runner:
-        type: "constant"
-        times: 1
-        concurrency: 1
-      context:
-          users:
-            tenants: 8
-            users_per_tenant: 4
-      sla:
-        failure_rate:
-          max: 0
-    -
-      args:
-        sleep: 0.01
-      runner:
-        type: "constant"
-        times: 1
-        concurrency: 1
-      context:
-        quotas:
-          nova:
-            instances: 200
-            cores: 200
-            ram: -1
-            floating_ips: 200
-            fixed_ips: 200
-            metadata_items: -1
-            injected_files: -1
-            injected_file_content_bytes: -1
-            injected_file_path_bytes: -1
-            key_pairs: 500
-            security_groups: 400
-            security_group_rules: 600
-          cinder:
-            gigabytes: -1
-            snapshots: -1
-            volumes: -1
-      sla:
-        failure_rate:
-          max: 0
-    -
-      args:
-        sleep: 0.6
-      runner:
-        type: "rps"
-        rps: 2
-        times: 5
-        timeout: 1
-      context:
-        users:
-          tenants: 1
-          users_per_tenant: 1
-      sla:
-        failure_rate:
-          max: 0
-    -
-      args:
-        sleep: 0.6
-      runner:
-        type: "constant"
-        concurrency: 2
-        times: 4
-        timeout: 1
-      context:
-        users:
-          tenants: 1
-          users_per_tenant: 1
-      sla:
-        failure_rate:
-          max: 0
-
     -
       args:
         sleep: 0.75
@@ -679,10 +680,6 @@
         type: "constant"
         times: 20
         concurrency: 5
-      context:
-        users:
-          tenants: 1
-          users_per_tenant: 1
       sla:
         failure_rate:
           min: 25
